force-app/main/default/objects/Claim__c/fields/AddressOfOccurrence__c.field-meta.xml
<CustomField>
    <fullName>AddressOfOccurrence__c</fullName>
    <label>Adresse de survenance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>