force-app/main/default/objects/Claim__c/fields/CausesAndCircumstances__c.field-meta.xml
<CustomField>
    <fullName>CausesAndCircumstances__c</fullName>
    <label>Causes et circonstances</label>
    <type>TextArea</type>
</CustomField>