force-app/main/default/objects/Claim__c/fields/CausesOfClaim__c.field-meta.xml
<CustomField>
    <fullName>CausesOfClaim__c</fullName>
    <label>Causes sinistre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chute d&apos;objet</fullName>
            </value>
            <value>
                <fullName>Jet de pierre</fullName>
            </value>
            <value>
                <fullName>Carambolage</fullName>
            </value>
            <value>
                <fullName>Renversement</fullName>
            </value>
            <value>
                <fullName>Choc / Collision</fullName>
            </value>
            <value>
                <fullName>Accident</fullName>
            </value>
            <value>
                <fullName>Panne</fullName>
            </value>
            <value>
                <fullName>Incendie</fullName>
            </value>
            <value>
                <fullName>Collision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>