force-app/main/default/objects/Claim__c/fields/CityOfOccurrence__c.field-meta.xml
<CustomField>
    <fullName>CityOfOccurrence__c</fullName>
    <label>Ville de survenance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ville</valueSetName>
    </valueSet>
</CustomField>