force-app/main/default/objects/Claim__c/fields/Commentaire__c.field-meta.xml
<CustomField>
    <fullName>Commentaire__c</fullName>
    <label>Commentaire</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>