force-app/main/default/objects/Claim__c/fields/DateOfOccurrence__c.field-meta.xml
<CustomField>
    <fullName>DateOfOccurrence__c</fullName>
    <formula>Case__r.DateOfOccurrence__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de survenance</label>
    <type>DateTime</type>
</CustomField>