force-app/main/default/objects/Claim__c/fields/EvenementAssocie__c.field-meta.xml
<CustomField>
    <fullName>EvenementAssocie__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Événement associé</label>
    <referenceTo>Evenement__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>