force-app/main/default/objects/Claim__c/fields/Flags__c.field-meta.xml
<CustomField>
    <fullName>Flags__c</fullName>
    <label>Flags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sensible</fullName>
            </value>
            <value>
                <fullName>Majeur</fullName>
            </value>
            <value>
                <fullName>Grave</fullName>
            </value>
            <value>
                <fullName>Frauduleux</fullName>
            </value>
            <value>
                <fullName>Douteux</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>