force-app/main/default/objects/Claim__c/fields/Garanties__c.field-meta.xml
<CustomField>
    <fullName>Garanties__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Garanties</label>
    <referenceTo>InsurancePolicyCoverage__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>