force-app/main/default/objects/Claim__c/fields/IncidentReport__c.field-meta.xml
<CustomField>
    <fullName>IncidentReport__c</fullName>
    <label>PV de constat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Police</fullName>
            </value>
            <value>
                <fullName>Gendarmerie</fullName>
            </value>
            <value>
                <fullName>Amiable</fullName>
            </value>
            <value>
                <fullName>Aucun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>