force-app/main/default/objects/Claim__c/fields/NumberOfInjuredPassengers__c.field-meta.xml
<CustomField>
    <fullName>NumberOfInjuredPassengers__c</fullName>
    <label>Nombre de passager blessés</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>