force-app/main/default/objects/Claim__c/fields/NumeroPolice__c.field-meta.xml
<CustomField>
    <fullName>NumeroPolice__c</fullName>
    <description>C’est le numéro de police lié à la déclaration.</description>
    <formula>HYPERLINK(
    &quot;/&quot; &amp; Case__r.Police__c,
    Case__r.Police__r.PolicyNumber__c,
    &quot;_blank&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro de police</label>
    <type>Text</type>
</CustomField>