force-app/main/default/objects/Claim__c/fields/PointsDeChoc__c.field-meta.xml
<CustomField>
    <fullName>PointsDeChoc__c</fullName>
    <label>Points de choc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>