force-app/main/default/objects/Claim__c/fields/PolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>PolicyNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Number</label>
    <referenceTo>InsurancePolicy__c</referenceTo>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>