force-app/main/default/objects/Claim__c/fields/PolicyNumberr__c.field-meta.xml
<CustomField>
    <fullName>PolicyNumberr__c</fullName>
    <formula>HYPERLINK(
    &quot;/&quot; &amp; Case__r.Police__c,
    Case__r.Police__r.PolicyNumber__c,
    &quot;_blank&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Number</label>
    <type>Text</type>
</CustomField>