force-app/main/default/objects/Claim__c/fields/PopupEvenementVu__c.field-meta.xml
<CustomField>
    <fullName>PopupEvenementVu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Popup Evenement Vu</label>
    <type>Checkbox</type>
</CustomField>