force-app/main/default/objects/Claim__c/fields/PrecisionsDommages__c.field-meta.xml
<CustomField>
    <fullName>PrecisionsDommages__c</fullName>
    <label>Précisions sur les dommages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>