force-app/main/default/objects/Claim__c/fields/QuiEstConducteur__c.field-meta.xml
<CustomField>
    <fullName>QuiEstConducteur__c</fullName>
    <label>Qui est le conducteur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assuré</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>