force-app/main/default/objects/Claim__c/fields/RegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>RegistrationNumber__c</fullName>
    <formula>HYPERLINK(
    Vehicule__c,
    Vehicule__r.RegistrationNumber__c,
    &quot;_blank&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro d’immatriculation</label>
    <type>Text</type>
</CustomField>