force-app/main/default/objects/Claim__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En cours de traitement</fullName>
            </value>
            <value>
                <fullName>Réouvert</fullName>
            </value>
            <value>
                <fullName>Classé sans suite</fullName>
            </value>
            <value>
                <fullName>Sinistre clos, soldé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>