force-app/main/default/objects/Claim__c/fields/TriggeringEventOfClaim__c.field-meta.xml
<CustomField>
    <fullName>TriggeringEventOfClaim__c</fullName>
    <label>Evénement déclencheur de sinistre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Évènement Catastrophe/ climatique &amp; naturel</fullName>
            </value>
            <value>
                <fullName>Incendie</fullName>
            </value>
            <value>
                <fullName>Vol</fullName>
            </value>
            <value>
                <fullName>Bris de glace</fullName>
            </value>
            <value>
                <fullName>Accident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>