force-app/main/default/objects/Claim__c/fields/UniteGestion__c.field-meta.xml
<CustomField>
    <fullName>UniteGestion__c</fullName>
    <formula>Case__r.UniteGestion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unité de gestion</label>
    <type>Text</type>
</CustomField>